--- a/web/src/components/Section/Features/Features.module.scss
+++ b/web/src/components/Section/Features/Features.module.scss
@@ -27,7 +27,7 @@
 
 @include mq($breakpoint-tablet) {
   .FeatureWrapper {
-    margin: spacing(10) 0;
+    margin: spacing(15) 0;
   }
 
   .LearnMoreWrapper {
